# TB-IA

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  descricao_do_projeto.md  especificacao_tecnica_do_sistema.md  frentes_de_desenvolvimento.md  guia_validacao_de_dominio.md  mvp2_municipal_contracts.md  proximos_passos.md  pyproject.toml  referencias.md  requirements-app.txt  requirements-dev.txt  requirements-notebook.txt
.github/workflows/: ci.yml
.interface-design/: system.md
backend/: __init__.py  main.py  rules_engine.py  schemas.py  seed.py  storage.py
docs/: architecture.md  biochallenge_context.md  competition_deliverables.md  data_dictionary.md  demo_script.md  lgpd_governance.md  pitch_outline.md  product_brief.md  rules.md  validation_plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/assets/mockup-icons/: README.md
frontend/src/components/: ConceptIcon.tsx  ConceptShell.tsx  IncidenceHistory.tsx  MapLegend.tsx  MetricCard.tsx  PriorityRankingList.tsx  ResistanceSurveillanceProfile.tsx  Shell.tsx  StatusBadge.tsx  TerritorialMap.tsx
frontend/src/lib/: api.ts  format.test.ts  format.ts  geojson.test.ts  geojson.ts  i18n.ts
frontend/src/pages/: ConceptOperationsPage.tsx  ConceptTerritorialPage.tsx  OperationsPage.tsx  TerritorialPage.tsx
frontend/src/styles/: app.css  product.css
frontend/src/test/: setup.ts
notebooks/: explorar_bases_publicas.ipynb  explorar_bases_publicas.py
scripts/: __init__.py  quality_gates.py  quality_lib.py  seed_synthetic.py  validate_docs.py
src/tbia/: __init__.py  __main__.py  cli.py  geography.py  history_validation.py  incidence_history_builder.py  incidence_history_fixture.py  mvp2.py  pipeline.py  preparation.py  storage.py
src/tbia/domain/: __init__.py  history.py  history_comparability.py  indicator_validation.py  indicators.py  models.py  operational_alerts.py  ranking_impact.py  recommendations.py  resistance_surveillance.py  resistance_surveillance_audit.py  scenarios.py
src/tbia/ingest/: __init__.py  contracts.py  datasus.py  datasus_transforms.py  local.py  readers.py  sinan_acceptance.py  sinan_contacts_validation.py  sinan_validation.py  tabnet.py
src/tbia/resources/demo/: incidence_history_ce_2018_2023.json  (+1 more)
src/tbia/web/: __init__.py  app.py  i18n.py
tests/: test_api.py  test_history_comparability.py  test_incidence_history_fixture.py  test_mvp1_datasus_transforms.py  test_mvp1_history.py  test_mvp1_indicators.py  test_mvp1_ingest.py  test_mvp1_pipeline_acceptance.py  test_mvp1_ranking_impact.py  test_mvp1_scenarios.py  test_mvp1_sinan_acceptance.py  test_mvp1_sinan_contacts_validation.py  test_mvp1_sinan_validation.py  test_mvp1_storage_and_api.py  test_mvp2_local_ingest.py  test_mvp2_operational_alerts.py  test_mvp2_storage_api_cli.py  test_preparation.py  test_quality_cli.py  test_quality_lib.py  test_resistance_surveillance.py  test_resistance_surveillance_audit.py  test_rules.py
tests/fixtures/mvp1_acceptance/: datasus_records.json  expected.json  ibge_localidades_ce.json  ibge_malhas_ce.geojson  ibge_population_ce_2022.json
(+5 files in other folders)
