[project]
name = "tb-ia-gestao-territorial"
version = "0.1.0"
description = "MVP BioChallenge para apoio operacional a APS no cuidado da tuberculose."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

