[project]
name = "tb-ia"
version = "0.1.0"
description = "Documentation and planning workspace for an intelligent tuberculosis public health decision-support platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<2.5",
  "pyarrow>=16.0",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "venv",
  "build",
  "data",
  "dist",
  "htmlcov",
]

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.11"
files = ["src", "scripts", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.coverage.run]
branch = true
source = ["scripts", "src/tbia/domain", "src/tbia/ingest", "tbia.storage"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "pyreaddbc"]
ignore_missing_imports = true
follow_imports = "skip"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
